[package]
  name        = "cambi"
  version     = "0.1.0"
  edition     = "2024"
  description = "A tool that infers semantic version bumps from conventional commits, updates CHANGELOG.md, and manages GitHub releases."
  homepage    = "https://sw.cowtech.it/cambi"
  repository  = "https://github.com/ShogunPanda/cambi"
  license     = "ISC"
  keywords    = ["terminal"]
  categories  = ["command-line-utilities", "command-line-interface"]

[lib]
  test    = false
  doctest = false

[dependencies]
  anyhow = { version = "1.0.101", features = ["backtrace"] }
  clap = { version = "4.5.58", default-features = false, features = [
    "std",
    "derive",
    "error-context",
    "help",
  ] }
  chrono = { version = "0.4.42", default-features = false, features = ["clock", "std"] }
  git2 = { version = "0.20.2" }
  regex = { version = "1.12.3" }
  semver = { version = "1.0.27" }
  serde = { version = "1.0.228", features = ["derive"] }
  serde_json = { version = "1.0.145" }
  serde_yaml = { version = "0.9.34" }
  toml = { version = "0.9.8" }
  tempera = { version = "0.3.0" }
  ureq = { version = "2.12.1", features = ["json"] }

[dev-dependencies]
  assert_cmd = { version = "2.0.17" }
  predicates = { version = "3.1.3" }
  serial_test = { version = "3.2.0" }
  tempfile = { version = "3.23.0" }
  tiny_http = { version = "0.12.0" }

[profile.release]
  opt-level     = 3
  lto           = "fat"
  codegen-units = 1
  panic         = "abort"
  strip         = true
