
[package]
  categories  = ["command-line-utilities", "command-line-interface"]
  description = "A tool that infers semantic version bumps from conventional commits, updates CHANGELOG.md, and manages GitHub releases."
  edition     = "2024"
  homepage    = "https://sw.cowtech.it/cambi"
  keywords    = ["terminal"]
  license     = "ISC"
  name        = "cambi"
  repository  = "https://github.com/ShogunPanda/cambi"
  version     = "0.2.4"

[dependencies]
  anyhow = { version = "1.0.101", features = ["backtrace"] }
  chrono = { version = "0.4.42", default-features = false, features = [
    "clock",
    "std",
  ] }
  clap = { version = "4.5.58", default-features = false, features = [
    "std",
    "derive",
    "error-context",
    "help",
  ] }
  git2 = "0.20.2"
  regex = "1.12.3"
  semver = "1.0.27"
  serde = { version = "1.0.228", features = ["derive"] }
  serde_json = "1.0.145"
  serde_yaml = "0.9.34"
  tempera = "0.3.0"
  toml = "0.9.8"
  toml_edit = "0.22.27"
  ureq = { version = "2.12.1", features = ["json"] }

[dev-dependencies]
  assert_cmd  = "2.0.17"
  predicates  = "3.1.3"
  serial_test = "3.2.0"
  tempfile    = "3.23.0"
  tiny_http   = "0.12.0"

[lib]
  doctest = false
  test    = false

[profile.release]
  codegen-units = 1
  lto           = "fat"
  opt-level     = 3
  panic         = "abort"
  strip         = true
